Developer checkpoint